# freeyeti-backend

./: .env  .gitignore  Dockerfile  Dockerfile.nginx  README.md  dev  manage.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: release.yaml
app/: urls.py
app/settings/: base.py  build.py  dev.py  production.py
app/templates/: base.html
backend/blog/: apis.py  models.py  urls.py  wagtail_hooks.py
backend/blog/migrations/: 0001_initial.py  0002_blogindex.py  0003_blogpage_author_blogpage_context_blogpage_date.py  0004_alter_blogpage_context.py  0005_aboutpage.py  0006_lifeblogpage.py  0007_lifeblogpage_view_count.py  0008_blogpage_view_count_lifeblogpage_feed_image.py  0009_alter_blogpage_view_count_and_more.py
backend/blog/templates/blog/: blog_page.html
backend/watch/: apis.py  apps.py  models.py  urls.py  youtube_utils.py
backend/watch/migrations/: 0001_initial.py  0002_remove_watch_thumbnail_remove_watch_url_and_more.py
backend/yechat/: apis.py  apps.py  models.py  serializer.py  urls.py
backend/yechat/migrations/: 0001_initial.py  0002_alter_chatroom_slug.py  0003_alter_chatroom_is_private.py
docker/: Dockerfile  app_all.spec  docker-compose.dev.yml  docker-compose.test.yml  docker-entrypoint  docker-entrypoint-migrate  docker-entrypoint.sh  nginx-site.conf  site.conf  test-in-container.sh
freeyeti/: urls.py  wsgi.py
freeyeti/settings/: base.py  production.py
k8s/: config-map.yaml  deployment.nginx.yaml  deployment.yaml  job.db-migrate.yaml  service.backend.yaml
