[tool.poetry]
name = "freeyeti"
version = "0.1.0"
description = ""
authors = ["freeyeti"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.5"
wagtail = "^4.1.1"
tzdata = "^2022.7"
coverage = "^7.1.0"
djangorestframework = "^3.14.0"


[tool.poetry.group.dev.dependencies]
pycodestyle = "^2.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
